# analytics

./: .env  LICENSE  Makefile  README.md  docker-compose.yml  generator.py  start.sh  test_generator.py
.github/workflows/: blank.yml
Alpha_V01/Beta/: README.md  create_db.sql
Alpha_V01/config/: config.yaml  countries.csv  init.sql  prefixes.csv
Alpha_V01/source/: Cargo.toml
Arch/: config.yaml  start.sh
Arch/config/: config.yaml  countries.csv  roam_in_ref.txt  sor_plan.csv
Arch/source/core/: Cargo.toml
Arch/source/core/src/: file.rs
Beta/: roam_in_parser.rs
Beta/frontend/: script.js
arch/: phone.py
arch/work_v01/: README.md
config/: config.yaml  countries.csv  init.sql  init_old.sql  operators.csv  operators_old.csv  prefixes.csv  prefixes_old.csv  roam_out_ref.txt  sor_plan.csv
dali/src/: main.rs
frontend_v01/: index_base.html  index_config.html  index_home.html
frontend_v01/js/: script.js
source/: .env  Cargo.toml  config.yaml
source/RIN/: ROAMIN_20250419.txt  ROAMIN_20250420.txt  ROAMIN_20250421.txt  ROAMIN_20250422.txt  (+3 more)
source/api-service/: Cargo.toml  Dockerfile
source/api-service/src/: handlers.rs  main.rs  repo.rs  service.rs
source_v02/: Cargo.toml
test_v01/: Cargo.toml
utils/: README.md  generate_operators.py  generate_prefixes.py  mobile_prefixes.csv  process.py  process_v01.py  result.csv  test.csv  test.py  tmp.csv
work/: .env  README.md  docker-compose.yml  main.py  main_v01.py  main_v02.py  main_v03.py  main_v04.py  main_v05.py  output.csv  requirements.txt
work/archive/loader-service_v01/: .env  Cargo.toml
work/archive/loader-service_v01/src/: db.rs  service.rs
work/archive/loader-service_v05/: Cargo.toml  config.yaml
work/archive/loader-service_v05/src/: errors.rs  service.rs  store.rs
work/test_v05/: Cargo.toml  database.sql
work/test_v05/queue_db/: db  snap.00000000000000F1
work/test_v05/src/: database.rs  error.rs  event.rs  event_generator.rs  generator.rs  main.rs  processor.rs  queue.rs
(+232 files in other folders)
