[package]
name = "test_v05"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
datafusion = "45.0.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sled = "0.34.7"
tokio = { version = "1.43.0", features = ["full"] }
