[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
csv = "1.3.1"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
