[package]
name = "loader-service"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = "0.7.13"
